Completed core features.

--- a/brgy_alert/casualty/templates/casualty/my_reports.html
+++ b/brgy_alert/casualty/templates/casualty/my_reports.html
@@ -5,7 +5,7 @@
 {% block content %}
 <div class="container mt-4">
     <h1>My Casualty Reports</h1>
-    <a href="{% url 'casualty:report' %}" class="btn btn-success mb-3">Submit New Report</a>
+    <a href="{% url 'casualty:report_form' %}" class="btn btn-success mb-3">Submit New Report</a>
     <table class="table table-bordered table-striped">
         <thead class="thead-dark">
             <tr>
