--- a/brgy_alert/casualty/templates/casualty/my_reports.html
+++ b/brgy_alert/casualty/templates/casualty/my_reports.html
@@ -7,7 +7,7 @@
     <h1>My Casualty Reports</h1>
     <a href="{% url 'casualty:report_form' %}" class="btn btn-success mb-3">Submit New Report</a>
     <table class="table table-bordered table-striped">
-        <thead class="thead-dark">
+        <thead style="background-color: var(--main-accent); color: #fff;">
             <tr>
                 <th>Victim Name</th>
                 <th>Contact Info</th>
